# passport-reader

./: .dockerignore  .env.example  .env.production.example  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml
browser-session/: pyproject.toml
browser-session/src/browser_session/: __init__.py  session_recorder.py
docs/: BACKLOG.md  (+10 more)
passport-admin-bot/: AGENTS.md  README.md  pyproject.toml
passport-admin-bot/src/passport_admin_bot/: bot.py  cli.py  config.py  menus.py  messages.py
passport-admin-bot/tests/: test_bot.py  test_config.py
passport-api/: .env.example  README.md  pyproject.toml
passport-api/src/passport_api/: __init__.py  app.py  cli.py  config.py  deps.py  main.py  schemas.py  services.py
passport-api/src/passport_api/routes/: __init__.py  auth.py  records.py
passport-api/tests/: test_api.py  test_api_config.py
passport-benchmark/: AGENTS.md  README.md  manifest.csv  pyproject.toml
passport-benchmark/cases/labeled/case_001/: expected.json
passport-benchmark/cases/labeled/case_002/: expected.json
passport-benchmark/cases/labeled/case_003/: expected.json
passport-benchmark/cases/labeled/case_004/: expected.json
passport-benchmark/cases/labeled/case_005/: expected.json
passport-benchmark/cases/labeled/case_006/: expected.json
passport-benchmark/cases/labeled/case_007/: expected.json
passport-benchmark/cases/labeled/case_008/: expected.json
passport-benchmark/cases/labeled/case_009/: expected.json
passport-benchmark/cases/labeled/case_010/: expected.json
passport-benchmark/cases/labeled/case_011/: expected.json
passport-benchmark/cases/labeled/case_012/: expected.json
passport-benchmark/cases/labeled/case_013/: expected.json
passport-benchmark/cases/labeled/case_014/: expected.json
passport-benchmark/cases/labeled/case_015/: expected.json
passport-benchmark/cases/labeled/case_016/: expected.json
passport-benchmark/cases/labeled/case_017/: expected.json
passport-benchmark/cases/labeled/case_018/: expected.json
passport-benchmark/cases/labeled/case_019/: expected.json
passport-benchmark/cases/labeled/case_020/: expected.json
passport-benchmark/cases/labeled/case_021/: expected.json
passport-benchmark/cases/labeled/case_022/: expected.json
passport-benchmark/cases/labeled/case_023/: expected.json
passport-benchmark/cases/labeled/case_024/: expected.json
passport-benchmark/cases/labeled/case_025/: expected.json
passport-benchmark/cases/labeled/case_026/: expected.json
passport-benchmark/cases/labeled/case_027/: expected.json
passport-benchmark/cases/labeled/case_028/: expected.json
passport-benchmark/cases/labeled/case_029/: expected.json
passport-benchmark/cases/labeled/case_030/: expected.json
passport-benchmark/cases/labeled/case_031/: expected.json
passport-benchmark/cases/labeled/case_032/: expected.json
passport-benchmark/cases/labeled/case_033/: expected.json
passport-benchmark/cases/labeled/case_034/: expected.json
passport-benchmark/cases/labeled/case_035/: expected.json
passport-benchmark/cases/labeled/case_036/: expected.json
passport-benchmark/cases/labeled/case_037/: expected.json
passport-benchmark/cases/labeled/case_038/: expected.json
passport-benchmark/cases/labeled/case_039/: expected.json
passport-benchmark/cases/labeled/case_040/: expected.json
passport-benchmark/cases/labeled/case_041/: expected.json
passport-benchmark/cases/labeled/case_042/: expected.json
passport-benchmark/cases/labeled/case_043/: expected.json
passport-benchmark/cases/labeled/case_044/: expected.json
passport-benchmark/cases/labeled/case_045/: expected.json
passport-benchmark/cases/labeled/case_046/: expected.json
passport-benchmark/cases/labeled/case_047/: expected.json
passport-benchmark/cases/labeled/case_048/: expected.json
passport-benchmark/cases/labeled/case_049/: expected.json
passport-benchmark/cases/labeled/case_050/: expected.json
passport-benchmark/cases/labeled/case_051/: expected.json
passport-benchmark/cases/labeled/case_052/: expected.json
passport-benchmark/cases/labeled/case_053/: expected.json
passport-benchmark/src/passport_benchmark/: __init__.py  compare.py  draft_unlabeled.py  extractor_v2.py  mrz.py  organize.py  prompt_v2.py  report.py  runner.py
passport-benchmark/tests/: test_compare.py  test_extractor_v2.py  test_mrz.py  test_report.py  test_runner.py
passport-core/: .env.example  .gitignore  AGENTS.md  README.md  benchmark_results.json  pyproject.toml
passport-core/.github/workflows/: ci.yml
passport-core/assets/: pricing.json
passport-core/src/passport_core/: __init__.py  benchmark.py  cli.py  config.py  errors.py  io.py  llm.py  log.py  models.py  pipeline.py  vision.py  vision_models.py  workflow.py
passport-core/tests/: conftest.py  test_benchmark.py  test_cli.py  test_config.py  test_contract_golden_samples.py  test_io.py  test_llm.py  test_mrz.py  test_pipeline.py  test_result_store.py  test_vision.py  test_workflow.py
passport-core/tests/fixtures/: ground_truth.csv
passport-platform/: .env.example  .gitignore  README.md  pyproject.toml
passport-platform/migrations/: 0001_initial.sql  0002_indexes.sql  0003_broadcasts.sql  0003_masar_columns.sql
passport-platform/src/passport_platform/: __init__.py  config.py  db.py  enums.py  errors.py  factory.py  storage.py  strings.py
passport-platform/tests/: test_auth_service.py  test_broadcast_service.py  test_processing_service.py  test_quota_service.py  test_records_service.py  test_reporting_service.py  test_results.py  test_seed_management.py  test_upload_service.py  test_user_service.py
passport-telegram/: .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
passport-telegram/src/passport_telegram/: __init__.py  bot.py  cli.py  config.py  extension.py  messages.py  queue.py  report.py
passport-telegram/tests/: test_bot.py  test_config.py  test_extension_command.py  test_extension_fetcher.py  test_messages.py  test_telegram_config.py
(+195 files in other folders)
