[project]
name = "browser-session"
version = "0.1.0"
description = "My First attemp to record my workflow in a specifice website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "camoufox[geoip]>=0.4.11",
  "playwright>=1.48.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.4",
  "ty>=0.0.1a16",
]

[project.scripts]
browser-session = "browser_session.session_recorder:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "A", "SIM", "RET", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_session"]
