[project]
name = "passport-api"
version = "0.1.0"
description = "FastAPI adapter for passport-platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118.0",
  "passport-platform",
  "pydantic-settings>=2.4.0",
  "uvicorn>=0.36.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.4",
]

[project.scripts]
passport-api = "passport_api.cli:main"

[tool.uv.sources]
passport-platform = { path = "../passport-platform", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "A", "SIM", "RET", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_api"]
