[project]
name = "passport-api"
version = "0.1.0"
description = "FastAPI adapter for passport-platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118.0",
  "passport-platform",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.22",
  "uvicorn>=0.36.0",
]

[project.scripts]
passport-api = "passport_api.cli:main"

[tool.uv.sources]
passport-platform = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_api"]
