[project]
name = "passport-benchmark"
version = "0.1.0"
description = "Benchmark and evaluation suite for passport-core extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "passport-core",
  "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.4",
  "ty>=0.0.1a16",
]

[project.scripts]
benchmark-draft-unlabeled = "passport_benchmark.draft_unlabeled:main"
benchmark-organize = "passport_benchmark.organize:main"
benchmark-run = "passport_benchmark.runner:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "A", "SIM", "RET", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
passport-core = { path = "../passport-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_benchmark"]
