[project]
name = "passport-benchmark"
version = "0.2.0"
description = "Benchmark and evaluation suite for passport-core extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "passport-core",
  "pydantic>=2.8.2",
]

[project.scripts]
benchmark-draft-unlabeled = "passport_benchmark.draft_unlabeled:main"
benchmark-organize = "passport_benchmark.organize:main"
benchmark-run = "passport_benchmark.runner:main"

[tool.uv.sources]
passport-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_benchmark"]
