[project]
name = "passport-core"
version = "0.1.0"
description = "Core passport processing services for Yemeni travel agencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "numpy>=1.26.4",
  "opencv-python-headless>=4.10.0.84",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
llm = [
  "google-genai>=0.7.0",
  "openai>=1.54.0",
]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.4",
]

[project.scripts]
passport-core = "passport_core.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "A", "SIM", "RET", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_core"]
