[project]
name = "passport-core"
version = "0.3.0"
description = "Core passport processing services for Yemeni travel agencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "numpy>=1.26.4",
  "onnxruntime==1.19.2",
  "opencv-python-headless>=4.10.0.84",
  "pydantic-ai-slim[openai]>=0.0.39",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_core"]
