[project]
name = "passport-platform"
version = "0.1.0"
description = "Shared application services for passport adapters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "passport-core",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "A", "SIM", "RET", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
passport-core = { path = "../passport-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/passport_platform"]
