[project]
name = "passport-platform"
version = "0.2.0"
description = "Shared application services for passport adapters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "passport-core",
  "pydantic-settings>=2.4.0",
]

[tool.uv.sources]
passport-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_platform"]
