[project]
name = "passport-platform"
version = "0.3.0"
description = "Shared application services for passport adapters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "passport-core",
  "pydantic-settings>=2.4.0",
]

[tool.uv.sources]
passport-core = { workspace = true }

[project.scripts]
passport-platform-seed = "passport_platform.management.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_platform"]
