[project]
name = "passport-telegram"
version = "0.3.0"
description = "Telegram bot adapter for passport-platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "passport-platform",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "python-telegram-bot[job-queue]>=21.6",
]

[project.scripts]
passport-telegram = "passport_telegram.cli:main"

[tool.uv.sources]
passport-platform = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_telegram"]
